--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,12 +28,9 @@ jobs:
       run: dotnet test ${{ github.workspace }}/SimpleFeedReader/SimpleFeedReader.csproj --no-build --verbosity normal
     - name: Publish
       run: dotnet publish ${{ github.workspace }}/SimpleFeedReader/SimpleFeedReader.csproj -c Release -o website
-    - name: copy scripts
-      run: dir
-      shell: powershell
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
         name: website
-        path: SimpleFeedReader/website/
+        path: SimpleFeedReader/website/*
         if-no-files-found: error
