--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build ${{ github.workspace }}/SimpleFeedReader.csproj --no-restore
+      run: dotnet build SimpleFeedReader/SimpleFeedReader.csproj --no-restore
     - name: Test
-      run: dotnet test ${{ github.workspace }}/SimpleFeedReader.csproj --no-build --verbosity normal
+      run: dotnet test SimpleFeedReader/SimpleFeedReader.csproj --no-build --verbosity normal
     - name: Publish
-      run: dotnet publish ${{ github.workspace }}/SimpleFeedReader.csproj -c Release -o website
+      run: dotnet publish SimpleFeedReader/SimpleFeedReader.csproj -c Release -o website
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
