--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -76,7 +76,7 @@ jobs:
     runs-on: ubuntu-latest
 
     environment:
-      name: PROD
+      name: DEV
       url: ${{ steps.slot_swap.outputs.url }}
 
     steps:
